--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install: true
 script:
 
   - |
+    ssh -V
     bash -n install.sh &&
     bash install.sh &&
     [ -r "$HOME/.ssh/config" ] &&
@@ -20,7 +21,7 @@ script:
     [ -d "$HOME/.ssh/config.d" ] &&
     [ -d "$HOME/.ssh/keys" ] &&
     [ -x "$HOME/.ssh/ssh_config_cat.sh" ] &&
-    ssh -G localhost |
+    ssh -Gv localhost |
     egrep -i '^CheckHostIP[ ]+no$' &&
     bash -n "$HOME/.ssh/ssh_config_cat.sh" &&
     bash "$HOME/.ssh/ssh_config_cat.sh" |
