--- a/ssh/config.d/02_localnetwork.conf
+++ b/ssh/config.d/02_localnetwork.conf
@@ -1,10 +1,10 @@
 # 03_localnetwork.conf
 
-Match originhost 10.*,172.16.*,172.17.*,172.18.*,172.19.*,172.2?.*,172.30.*,172.31.*,192.168.*
+Match originalhost 10.*,172.16.*,172.17.*,172.18.*,172.19.*,172.2?.*,172.30.*,172.31.*,192.168.*
 
 	# CheckHostIP:
 	# If set to yes, ssh(1) will additionally check the host IP address
-	# in the known_hosts file. 
+	# in the known_hosts file.
 	CheckHostIP no
 
 	# StrictHostKeyChecking:
@@ -14,7 +14,7 @@ Match originhost 10.*,172.16.*,172.17.*,172.18.*,172.19.*,172.2?.*,172.30.*,172.
 	StrictHostKeyChecking no
 
 	# UserKnownHostsFile:
-	# Specifies one or more files to use for the user host key 
+	# Specifies one or more files to use for the user host key
 	# database, separated by whitespace. The default is
 	# ~/.ssh/known_hosts, ~/.ssh/known_hosts2.
 	UserKnownHostsFile /dev/null
