--- a/.travis.yml
+++ b/.travis.yml
@@ -15,21 +15,20 @@ install: true
 script:
 
   - |
-    set -x
-    ssh -V
+    set -x; ssh -V
     bash -n install.sh &&
-    bash install.sh &&
-    [ -r "$HOME/.ssh/config" ] &&
-    [ -r "$HOME/.ssh/default.conf" ] &&
-    [ -d "$HOME/.ssh/config.d" ] &&
-    [ -d "$HOME/.ssh/keys" ] &&
-    [ -x "$HOME/.ssh/ssh_config_cat.sh" ] &&
-    bash -n "$HOME/.ssh/ssh_config_cat.sh" &&
-    bash "$HOME/.ssh/ssh_config_cat.sh" |
-    tee "$HOME/.ssh/config_all"
-    cat "$HOME/.ssh/config_all" |
+    bash -x install.sh && {
+      [ -r "$HOME/.ssh/config" ] &&
+      [ -r "$HOME/.ssh/default.conf" ] &&
+      [ -d "$HOME/.ssh/config.d/" ] &&
+      [ -d "$HOME/.ssh/keys/" ] &&
+      [ -x "$HOME/.ssh/ssh_config_cat.sh" ] &&
+      cat "${HOME}/.config/dot-ssh-files/.git/config |
+      egrep -i 'filemode[ \t]+=[ \t]+false'
+    } &&
+    cat "$HOME/.ssh/config" |
     egrep -i '^[ \t]*(LogLevel[ \t]VERBOSE|CheckHostIP[ \t]+no)[ \t]*$' &&
-    ssh -Gv -F "$HOME/.ssh/config_all" localhost |
+    ssh -Gv localhost |
     egrep -i '^[ \t]*(LogLevel[ \t]VERBOSE|CheckHostIP[ \t]+no)[ \t]*$' &&
     : "OK";
 
