--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-# .gitattributes
+# gitattributes
 # https://github.com/mtangh/dot-git-files/
 # vim: set ff=unix ts=2 sw=2 sts=2 et : This line is VIM modeline
 #
