--- a/ssh/config.d/00_localhost.conf
+++ b/ssh/config.d/00_localhost.conf
@@ -1,4 +1,5 @@
-# 00_localhost.conf
+# config.d/00_localhost.conf
+# vim: set ff=unix ts=2 sw=2 sts=2 et : This line is VIM modeline
 
 ##-
 ##- localhost
@@ -17,7 +18,7 @@ Match originalhost 127.0.0.1,localhost,localhost.loccaldomain
 
 	# CheckHostIP:
 	# If set to yes, ssh(1) will additionally check the host IP address
-	# in the known_hosts file. 
+	# in the known_hosts file.
 	CheckHostIP no
 
 	# StrictHostKeyChecking:
@@ -27,7 +28,7 @@ Match originalhost 127.0.0.1,localhost,localhost.loccaldomain
 	StrictHostKeyChecking no
 
 	# UserKnownHostsFile:
-	# Specifies one or more files to use for the user host key 
+	# Specifies one or more files to use for the user host key
 	# database, separated by whitespace. The default is
 	# ~/.ssh/known_hosts, ~/.ssh/known_hosts2.
 	UserKnownHostsFile /dev/null
