--- a/ssh/config.d/02_localnetwork-classB.conf
+++ b/ssh/config.d/02_localnetwork-classB.conf
@@ -1,6 +1,7 @@
-# 03_localnetwork.conf
+# config.d/02_localnetwork-classB.conf
+# vim: set ff=unix ts=2 sw=2 sts=2 et : This line is VIM modeline
 
-Match originalhost 10.*,172.16.*,172.17.*,172.18.*,172.19.*,172.2?.*,172.30.*,172.31.*,192.168.*
+Match originalhost 172.16.*,172.17.*,172.18.*,172.19.*,172.2?.*,172.30.*,172.31.*
 
 	# CheckHostIP:
 	# If set to yes, ssh(1) will additionally check the host IP address
@@ -30,4 +31,5 @@ Match originalhost 10.*,172.16.*,172.17.*,172.18.*,172.19.*,172.2?.*,172.30.*,17
 	# for future client connections) after the initial client connection
 	# has been closed.
 	ControlPersist 10s
+
 
