--- a/ssh/config
+++ b/ssh/config
@@ -303,7 +303,7 @@ Host *
 	# Specifies one or more files to use for the user host key
 	# database, separated by whitespace. The default is
 	# ~/.ssh/known_hosts, ~/.ssh/known_hosts2.
-	UserKnownHostsFile ~/.ssh/known_hosts ~/.ssh/known_hosts2
+	#UserKnownHostsFile ~/.ssh/known_hosts ~/.ssh/known_hosts2
 
 	# NoHostAuthenticationForLocalhost:
 	# Disable host authentication for localhost (loopback addresses).
