--- a/ssh/default.conf
+++ b/ssh/default.conf
@@ -39,3 +39,32 @@ Host *
 	# or ''no''. The default is ''no''.
 	Compression yes
 
+    # ControlMaster:
+    # Enables the sharing of multiple sessions over a single network
+    # connection. When set to yes, ssh(1) will listen for connections
+    # on a control socket specified using the ControlPath argument.
+    # Additional sessions can connect to this socket using the same
+    # ControlPath with ControlMaster set to no (the default).
+    ControlMaster auto
+
+    # ControlPath:
+    # Specify the path to the control socket used for connection sharing
+    # as described in the ControlMaster section above or the string none
+    # to disable connection sharing.
+    ControlPath ~/.ssh/mux-%r@%h:%p
+
+    # ControlPersist:
+    # When used in conjunction with ControlMaster, specifies that the
+    # master connection should remain open in the background (waiting
+    # for future client connections) after the initial client connection
+    # has been closed. If set to no, then the master connection will not
+    # be placed into the background, and will close as soon as the
+    # initial client connection is closed. If set to yes or 0, then the
+    # master connection will remain in the background indefinitely (until
+    # killed or closed via a mechanism such as the "ssh -O exit"). If
+    # set to a time in seconds, or a time in any of the formats
+    # documented in sshd_config(5), then the backgrounded master
+    # connection will automatically terminate after it has remained
+    # idle (with no client connections) for the specified time.
+    ControlPersist 12s
+
