--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,9 @@
 *.old
 logs
 *.log
-*.log*
+*.log.*
+*.log_*
+*.log-*
 *.autosave
 *~.nib/
 ## MS Office
@@ -499,17 +501,4 @@ typings/
 
 ## Node: Serverless directories
 .serverless
-
-
-#
-# .gitignore.d
-#
-
-# ssh/config.d
-ssh/config.d/*
-!ssh/config.d/.gitkeep
-!ssh/config.d/0*.conf
-# ssh/keys
-ssh/keys/*
-!ssh/keys/.gitkeep
 
